objects/Feature_Duration__c/Feature_Duration__c.object-meta.xml
<CustomObject>
    <label>Feature Duration</label>
    <nameField>
        <label>Feature Duration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Durations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>