objects/Feature_Duration__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Feature Durations</relationshipLabel>
    <relationshipName>Feature_Durations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>