objects/Feature_Duration__c/listViews/Feature_Duration_with_External_ID.listView-meta.xml
<ListView>
    <fullName>Feature_Duration_with_External_ID</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Feature Duration with External ID</label>
</ListView>